# ikrelln

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.postgres  Dockerfile.sqlite  README.md  build.rs
Dockerfile.all-in-one/: Dockerfile  nginx.conf  start.sh
migrations/2018-01-21-085924_create_ingest/: down.sql  up.sql
migrations/2018-01-23-220231_span/: down.sql  up.sql
migrations/2018-02-06-190532_tests/: down.sql  up.sql
migrations/2018-02-18-134553_scripts/: down.sql  up.sql
migrations/2018-03-02-134922_reports/: down.sql  up.sql
migrations/2018-03-09-093037_additional_fields_in_report/: down.sql  up.sql
migrations/2018-03-28-224819_test_result_cleanup/: down.sql  up.sql
src/: bin.rs  config.rs  lib.rs  main.rs
src/api/: errors.rs  grafana.rs  healthcheck.rs  mod.rs  report.rs  script.rs  span.rs  test.rs
src/api/grafana/: data_queries.rs  mod.rs  query.rs  search.rs
src/db/: cleanup.rs  helper.rs  ingest_event.rs  mod.rs  reports.rs  schema.rs  scripts.rs  span.rs  test.rs  test_result.rs
src/db/read/: mod.rs  reports.rs  scripts.rs  span.rs  test.rs
src/db/update/: cleanup.rs  mod.rs  reports.rs  scripts.rs  span.rs  test.rs
src/engine/: batcher.rs  ingestor.rs  mod.rs  report.rs  span.rs  streams.rs  test.rs  test_result.rs
src/http/: errors.rs  healthcheck.rs  ingest.rs  mod.rs  span.rs  test_result.rs
src/opentracing/: mod.rs  span.rs  tags.rs
tests/: helpers.rs  ingest_span.rs  ingest_spans.rs  reports.rs  scripts.rs  test.rs  test_result.rs  test_result_ignore_missing_tag.rs
tests/helpers/: mod.rs
