[package]
name = "ikrelln"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
build = "build.rs"

[dependencies]
log = "0.4"
fern = "0.5"
chrono = "0.4"
mime = "0.3"
time = "0.1"

clap = "2.29"

uuid = { version = "0.5", features = ["serde", "v4"] }

serde = "1.0"
serde_derive = "1.0"

futures = "0.1"
env_logger = "0.5"
actix = "0.4"
actix-web = "0.3"

failure = "0.1"

diesel = { version = "1.1.0" }
libsqlite3-sys = { version = "*", features = ["bundled"], optional = true }
openssl-sys = { version = "*", optional = true }

[patch.crates-io]
# Needed for Postgres. Patches the build script to support cross-compilation.
pq-sys = { git = 'https://github.com/golddranks/pq-sys' }

[features]
default = [ "postgres" ]
postgres = [ "diesel/postgres", "openssl-sys" ]
sqlite = [ "diesel/sqlite", "libsqlite3-sys" ]
