[package]
name = "ikrelln"
version = "0.2.0"
authors = ["François Mockers <mockersf@gmail.com>"]
build = "build.rs"

[lib]
name = "ikrelln"
path = "src/lib.rs"

[[bin]]
name = "ikrelln"
path = "src/bin.rs"

[dependencies]
log = "0.4"
fern = "0.5"
chrono = { version = "0.4", features = [ "serde" ] }
mime = "0.3"
lazy_static = "1.0"
clap = "2.29"

uuid = { version = "0.6", features = ["serde", "v4"] }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = { git = "https://github.com/smangelsdorf/serde_urlencoded", branch = "unit-enum-as-string" }

futures = "0.1"
env_logger = "0.5"
actix = "0.5"
actix-web = "0.5"

failure = "0.1"

diesel = { version = "1.2.2", features = [ "chrono" ] }
libsqlite3-sys = { version = "*", features = ["bundled"], optional = true }
openssl-sys = { version = "*", optional = true }

http = "0.1"

cpython = { version = "0.2", optional = true }

[patch.crates-io]
# Needed for Postgres. Patches the build script to support cross-compilation.
pq-sys = { git = 'https://github.com/golddranks/pq-sys' }

[features]
default = [ "postgres" ]
postgres = [ "diesel/postgres", "openssl-sys" ]
sqlite = [ "diesel/sqlite", "libsqlite3-sys" ]
python = [ "cpython" ]
